feat: rebrand and translate site to Stjärn Bygg & Måleri
- Localize Navbar, Footer, and TopBar components into Swedish.
- Update business name, contact details, and service offerings for Stockholm market.
- Adjust site metadata and titles for SEO optimization in the new region.
- Transition from Ray's Pro Finish to a new business structure (Stjärn Bygg & Måleri).

--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -24,7 +24,9 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>rayprofinish</title>
+		<title>
+			Stjärn Bygg & Måleri | Proffs på Måleri & Snickeri i Stockholm
+		</title>
 	</head>
 	<body>
 		<div id="root"></div>
